<resources>
    <string name="app_name">BookingApp</string>
    <string name="BookingApp">BookingApp</string>
    <string name="logo_photo">logo photo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">"Don't have an account ? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="please_create_an_account">Please create an account</string>
    <string name="please_enter_your_details_below">Please enter your details below</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_want_to_register_as_a">I want to register as a:</string>
    <string name="Manager">Manager</string>
    <string name="Client">Client</string>
    <string name="manager">Manager</string>
    <string name="client">Client</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="back">back</string>
    <string name="choose_a_filter">Choose a filter</string>
    <string name="book_a_hotel">Book a hotel</string>
    <string name="rate_a_hotel">Rate a hotel</string>
    <string name="rate_1_5_stars">Rate (1-5 stars)</string>
    <string name="hote_name">Hotel Name:</string>
    <string name="rate">Rate</string>
    <string name="check">check</string>
    <string name="no_existed_hotels">No existed hotels</string>
    <string name="photo">photo</string>
    <string name="price">Price</string>
    <string name="star">star</string>
    <string name="area">Area</string>
    <string name="number_of_people">Number of people</string>\
    <string name="number_of_reviews">Number of reviews</string>
    <string name="choose_one_or_multiple_filters">Choose one or multiple filters</string>
    <string name="date_you_re_interested_in_yyyy_mm_dd">Date (YYYY-MM-DD)</string>
    <string name="maximum_price_per_night">Maximum price per night</string>
    <string name="stars_of_the_hotel_1_5">Hotel stars (1–5)</string>
    <string name="search">Search</string>
    <string name="my_reservations">My Reservations</string>
    <string name="book">Book</string>
    <string name="add_hotel">Add a hotel</string>
    <string name="add_available_dates">Add available dates</string>
    <string name="show_reservations">Show my reservations</string>
    <string name="reservations_by_area">Reservations by area</string>
    <string name="name_of_the_hotel">Name of the hotel</string>
    <string name="dates">Dates (YYYY-MM-DD - YYYY-MM-DD)</string>
    <string name="finish">Finish</string>
    <string name="client_id">Client ID:</string>
    <string name="reservation_period">Reservation Period:</string>
    <string name="hotel_image">hotel image</string>
    <string name="ReservationDates">Dates (YYYY-MM-DD - YYYY-MM-DD)</string>
    <string name="no_existed_hotels_for_rate">No existed hotels for rate</string>
    <string name="give_the_details_of_the_new_hotel">Give the details of the new hotel</string>
    <string name="path_of_the_image_bin_hotel_image">Path of the image(hotel_images/)</string>
    <string name="add">Add</string>
    <string name="please_complete_the_fields_below_to_add_a_new_hotel">Please complete the fields below to add a new hotel.</string>
    <string name="addHotel">Add Hotel</string>
    <string name="welcome">Welcome</string>
    <string name="filter_hotels">Filter hotels</string>
    <string name="add_your_hotel">Add your hotel:</string>
    <string name="image_path_hotel_images">Image path (hotel_images/...)</string>
    <string name="hotel">Hotel</string>
    <string name="hotel_name">Hotel name</string>
    <string name="create">Create</string>
    <string name="confirm">Confirm</string>
    <string name="add_hotel_info">Add hotel info</string>
    <string name="no_available_hotels">No available hotels</string>
    <string name="people">people</string>
    <string name="r">R</string>
    <string name="available_dates">Available Dates</string>
    <string name="availabledates">Available Dates</string>
    <string name="reservations">Reservations</string>
    <string name="reservation_by_area">Reservations By Area</string>
    <string name="give_the_period_time_e_g_yy_mm_dd_yy_mm_dd">Time period (YYYY-MM-dd - YYYY-MM-dd)</string>
    <string name="return_to_front_page">Return</string>


</resources>