<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fillViewport="true"
    android:padding="0dp"
    tools:context=".frontend.activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="241dp"
                android:layout_height="121dp"
                android:layout_gravity="center"
                android:layout_marginTop="40sp"
                android:contentDescription="@string/logo_photo"
                android:src="@drawable/bookingapp_bluelight" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:lineSpacingExtra="12sp"
                android:text="@string/sign_up"
                android:textColor="#549cf4"
                android:paddingTop="40dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/please_enter_your_details_below"
                android:textColor="#7A91BC"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.966" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginStart="25dp"
                android:hint="@string/name"
                android:textColorHint="#7A91BC"
                app:boxStrokeColor="#7A91BC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameText"
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginStart="25dp"
                android:hint="@string/surname"
                android:textColorHint="#7A91BC"
                app:boxStrokeColor="#7A91BC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameText"
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginStart="25dp"
                android:hint="@string/username"
                android:textColorHint="#7A91BC"
                app:boxStrokeColor="#7A91BC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameText"
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/password"
                android:layout_marginStart="25dp"
                android:textColorHint="#7A91BC"
                app:boxStrokeColor="#7A91BC"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text"
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/confirm_password"
                android:textColorHint="#7A91BC"
                app:boxStrokeColor="#7A91BC"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignUpConfirmPassword"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="36dp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="#549cf4"
                android:fontFamily="sans-serif-medium"
                android:text="@string/i_want_to_register_as_a">

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:checkedButton="@+id/client_choice"
                    android:id="@+id/toggle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/lightblue_out_line"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginStart="1dp"
                        android:id="@+id/manager_choice"
                        android:background="@drawable/toggle_widget_background"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/Manager"
                        android:textSize="20sp"
                        android:textColor="@drawable/manager_text_selector"
                        />

                    <RadioButton
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:id="@+id/client_choice"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_widget_background"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/Client"
                        android:textSize="20sp"
                        android:textColor="@drawable/client_text_selector"
                        />
                </RadioGroup>

            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_corner"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:cornerRadius="20dp" />
            </FrameLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/already_have_an_account"
                    android:textColor="#7A91BC"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    android:fontFamily="sans-serif-medium"
                    android:foregroundTint="#200949"
                    android:text="@string/sign_in"
                    android:textColor="#549cf4"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>