<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".frontend.activity.ClientConsoleActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="678dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/log_out"
            android:layout_width="58dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/log_out_new"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.150"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@string/logo_photo"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:src="@drawable/bookingapp_bluelight" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="422dp"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.948">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_filter"
            android:layout_width="322dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/filter_2_30"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="@string/filter_hotels"
            android:textAllCaps="false"
            android:paddingStart="24dp"

            android:textColor="@color/white"
            android:textSize="21sp"
             />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_book"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/addhotel36"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="@string/book_a_hotel"
            android:paddingStart="24dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_rate"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/rate30"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/rate_a_hotel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="21sp"

            app:cornerRadius="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewClientConsole"
        android:layout_width="406dp"
        android:layout_height="29dp"
        android:layout_marginTop="220dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#7A91BC"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>