<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.activity.SignInActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="269dp"
                android:background="@color/white"
                android:gravity="bottom|center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.524">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="241dp"
                    android:layout_height="121dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/white"
                    android:contentDescription="@string/logo_photo"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bookingapp_bluelight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="124dp"
                    android:layout_height="42dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:text="@string/login"
                    android:textColor="#549cf4"

                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.832" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="207dp"
                    android:layout_height="30dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/please_sign_in_to_continue"
                    android:textColor="#7A91BC"
                    android:textSize="17sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.966" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/username"
                android:textColorHint="#7A91BC"
                app:boxStrokeColor="#7A91BC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameText"
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:textColorHint="#7A91BC"
                app:boxStrokeColor="#7A91BC"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text"
                    android:layout_width="350dp"
                    android:layout_height="55dp"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_corner"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:cornerRadius="20dp" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#7A91BC"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    android:fontFamily="sans-serif-medium"
                    android:foregroundTint="#200949"
                    android:text="@string/sign_up"
                    android:textColor="#549cf4"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>