<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="4dp"
    android:background="@color/white">


    <TextView
        android:id="@+id/hotelName"
        android:layout_width="411dp"
        android:layout_height="64dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hote_name"
        android:textAlignment="viewStart"
        android:paddingLeft="14dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />


    <TextView
        android:id="@+id/ReservationPeriod"
        android:layout_width="236dp"
        android:layout_height="272dp"
        android:layout_marginEnd="172dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="14dp"
        android:text="@string/reservation_period"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858"
        tools:ignore="TextSizeCheck"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="146dp"
        android:layout_height="252dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        android:contentDescription="@string/photo"
        android:paddingLeft="14dp"
        android:scaleType="centerCrop"
        android:src="@drawable/my_portovilla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>